--- a/06-events-practice/2-tooltip/index.html
+++ b/06-events-practice/2-tooltip/index.html
@@ -5,10 +5,10 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <body>
-  <div data-tooltip="foo">
+  <div data-tooltip="foo" style="margin: 20px; background-color: cadetblue;">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi enim esse sapiente.
     Necessitatibus praesentium similique voluptatem.
-    <div data-tooltip="bar-bar-bar">
+    <div data-tooltip="bar-bar-bar" style="background-color: aqua; height: 100px;">
       Aperiam consectetur dignissimos dolores ex mollitia.
     </div>
     Alias aliquid animi corporis debitis, eveniet explicabo facilis hic laborum magni nisi nulla
