--- a/06-events-practice/1-sortable-table-v2/index.html
+++ b/06-events-practice/1-sortable-table-v2/index.html
@@ -10,6 +10,7 @@
 <script type="module">
   import SortableTable from './index.js';
   import data from './products-data.js';
+  import {compareViaIntlCollarator} from '../../02-javascript-data-types/1-sort-strings/index.js';
 
   const header = [
     {
@@ -50,7 +51,7 @@
     },
   ];
 
-  const sortableTable = new SortableTable(header, { data });
+  const sortableTable = new SortableTable(header, { data }, compareViaIntlCollarator);
 
   root.append(sortableTable.element);
 </script>
