--- a/05-dom-document-loading/2-sortable-table-v1/index.html
+++ b/05-dom-document-loading/2-sortable-table-v1/index.html
@@ -29,7 +29,6 @@
 <script type="module">
   import SortableTable from './index.js';
   import data from './products-data.js';
-  import {compareViaIntlCollarator} from '../../02-javascript-data-types/1-sort-strings/index.js';
 
   const header = [
     {
@@ -70,7 +69,7 @@
     },
   ];
 
-  const sortableTable = new SortableTable(header, { data }, compareViaIntlCollarator);
+  const sortableTable = new SortableTable(header, { data });
 
   root.append(sortableTable.element);
 
