--- a/06-events-practice/1-sortable-table-v2/index.html
+++ b/06-events-practice/1-sortable-table-v2/index.html
@@ -10,7 +10,6 @@
 <script type="module">
   import SortableTable from './index.js';
   import data from './products-data.js';
-  import {compareViaIntlCollarator} from '../../02-javascript-data-types/1-sort-strings/index.js';
 
   const header = [
     {
@@ -51,7 +50,7 @@
     },
   ];
 
-  const sortableTable = new SortableTable(header, { data }, compareViaIntlCollarator);
+  const sortableTable = new SortableTable(header, { data });
 
   root.append(sortableTable.element);
 </script>
