--- a/09-tests-for-frontend-apps/2-sortable-list/index.html
+++ b/09-tests-for-frontend-apps/2-sortable-list/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./style.css">
 <body>
 
 <div id="holder"></div>
