--- a/08-forms-fetch-api-part-2/2-range-picker/index.html
+++ b/08-forms-fetch-api-part-2/2-range-picker/index.html
@@ -17,19 +17,21 @@
 
 <link rel="stylesheet" href="style.css">
 
-<div id="holder" class="container"></div>
+<body>
+  <div id="holder" class="container"></div>
 
-<script type="module">
-  import RangePicker from './index.js';
+  <script type="module">
+    import RangePicker from './index.js';
 
-  const rangePicker = new RangePicker({
-    from: new Date(2019, 9, 2),
-    to: new Date(2019, 10, 5)
-  });
+    const rangePicker = new RangePicker({
+      from: new Date(2019, 9, 2),
+      to: new Date(2019, 10, 5)
+    });
 
-  holder.append(rangePicker.element);
+    holder.append(rangePicker.element);
 
-  rangePicker.element.addEventListener('date-select', event => {
-    console.error(event);
-  });
-</script>
+    rangePicker.element.addEventListener('date-select', event => {
+      console.error(event);
+    });
+  </script>
+</body>
